Melhorias na responsividade
Mudança no tamanho das fontes, espaçamentos e tamanho das imagens e adição de hooks para o texto do carrossel.

--- a/src/app/components/cabecalho/Cabecalho.css
+++ b/src/app/components/cabecalho/Cabecalho.css
@@ -7,8 +7,14 @@ header {
 }
 
 .icone-losangulo {
-    width: 20px;
-    height: 20px;
+    width: 2vh;
+    height: 2vh;
     rotate: 45deg;
     background-color: #000;
+}
+
+@media (max-width: 768px) {
+    header {
+        height: 5%;
+    }
 }
