--- a/src/app/components/carrossel/Carrossel.css
+++ b/src/app/components/carrossel/Carrossel.css
@@ -12,6 +12,40 @@
     align-items: center;
 }
 
+
+.carrossel-titulo {
+    height: 20%;
+    display: flex;
+    align-items: end;
+    font-size: 4vh;
+    color: #303030;
+}
+
+.carrossel-texto {
+    height: 60%;
+    display: flex;
+    color: #606060;
+    align-items: center;
+    font-size: 2.1vh;
+}
+
+.carrossel-butao {
+    font-size: 2.5vh;
+    color: #606060;
+    font-weight: 600;
+    padding: 2vh 6vw;
+    border-radius: 10px;
+    background-color: #FFF;
+    border: 3px solid #606060;
+}
+
+.carrossel-butao:hover {
+    transition: .3s;
+    color: #303030;
+    border: 3px solid #303030;
+    background-color: #F5F5F5;
+}
+
 .carrossel-butao-voltar {
     width: 10%;
     height: 50%;
@@ -47,6 +81,8 @@
 .carrossel-cartao-conteudo {
     width: 90%;
     height: 90%;
+    display: flex;
+    flex-direction: column;
 }
 
 .carrossel-butao-avancar {
@@ -55,8 +91,4 @@
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.carrossel-paginas {
-
 }
