--- a/src/app/components/cartao-habilidade/CartaoHabilidade.css
+++ b/src/app/components/cartao-habilidade/CartaoHabilidade.css
@@ -16,6 +16,10 @@
     border: 3px solid #303003;
 }
 
+.cartao-moldura img {
+    width: 80%;
+}
+
 .cartao-moldura:hover {
     transition: .5s;
     border: 3px solid #000;
@@ -29,5 +33,5 @@
 
 .cartao-texto {
     color: #606060;
-    font-size: 1.2em;
+    font-size: 2vh;
 }
