--- a/src/app/components/item-menu/ItemMenu.css
+++ b/src/app/components/item-menu/ItemMenu.css
@@ -10,14 +10,14 @@
 
 .item-menu-link {
     display: flex;
-    font-size: 3rem;
+
     flex-direction: row;
     text-decoration: none;
 }
 
 .item-menu-link:hover .item-menu-icone {
     transition: 0.5s;
-    transform: rotate(145deg);
+    transform: rotate(135deg);
     background-color: #303030; 
 }
 
@@ -32,8 +32,8 @@
 }
 
 .item-menu-icone {
-    width: 20px;
-    height: 20px;
+    width: 2vh;
+    height: 2vh;
     transition: 0.5s;
     margin-right: 50px;
     transform: rotate(45deg);
@@ -41,6 +41,7 @@
 }
 
 .item-menu-texto {
+    font-size: 5vh;
     transition: 0.5s;
     color: #909090;
 }
@@ -48,4 +49,15 @@
 .item-menu-conteudo:hover .item-menu-texto {
     transition: 0.5s;
     transform: translateX(30px);   
+}
+
+@media (max-width: 768px) {
+    .item-menu-icone {
+        width: 10px;
+        height: 10px;
+        margin-right: 30px;
+    }
+    .item-menu-texto {
+        font-size: 1.5rem; 
+    }
 }
