--- a/src/app/components/voltar/Voltar.css
+++ b/src/app/components/voltar/Voltar.css
@@ -1,10 +1,10 @@
 .butao-voltar {
     display: flex;
+    font-size: 3vh;
+    color: #606060;
     flex-direction: row;
     align-items: center;
     text-decoration: none;
-    font-size: 2em;
-    color: #606060;
     transition: opacity 1s ease-in-out, transform 1s ease-in-out;
 }
 
