--- a/src/app/pages/inicio/Inicio.css
+++ b/src/app/pages/inicio/Inicio.css
@@ -26,3 +26,11 @@
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+@media (max-width: 768px) {
+    .secao-direita-imagem {
+        width: 100%;
+        display: flex;
+        align-items: center;
+    }
+}
