--- a/src/app/components/carrossel/Carrossel.css
+++ b/src/app/components/carrossel/Carrossel.css
@@ -12,13 +12,27 @@
     align-items: center;
 }
 
-
-.carrossel-titulo {
+.carrossel-cabecalho {
     height: 20%;
     display: flex;
-    align-items: end;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.carrossel-titulo {
     font-size: 4vh;
     color: #303030;
+    
+}
+
+.carrossel-categoria {
+    background-color: #909090;
+    border-radius: 50px;
+    padding: 5px 30px;
+    color: #FFF;
+    text-transform: uppercase;
+    font-size: 1.3vh;
 }
 
 .carrossel-texto {
