--- a/src/components/Carrossel/Carrossel.css
+++ b/src/components/Carrossel/Carrossel.css
@@ -16,9 +16,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border-radius: 10px;
     overflow: hidden;
-    
 }
 
 /* Lista com a animação de transição */
@@ -32,6 +30,7 @@
 /* Item do Carrossel (Cartão) */
 .carrossel-item {
     min-width: 100%;
+    height: 100%;
     padding: 50px;
     display: flex;
     flex-direction: column;
@@ -39,7 +38,6 @@
     background-color: var(--cor-background);
     border-radius: 20px;
     border: 5px solid var(--cor-primaria);
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
 }
 
 /* Header do Carrossel */
@@ -72,15 +70,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: var(--cor-primaria);
     border-radius: 70px;
     transition: 0.5s ease;
 }
 
 .carrossel-botao:hover {
     transform: translate(0, -5px);
-    box-shadow: 0 20px 50px var(--cor-destaque);
-    background-color: var(--cor-destaque);
+    box-shadow: 0 30px 30px var(--cor-destaque);
+    background-color: var(--cor-secundaria);
 }
 
 /* Botão do item */
@@ -117,12 +114,17 @@
 .bolinha {
     width: 12px;
     height: 12px;
-    background-color: var(--cor-primaria);
+    background-color: var(--cor-destaque);
     border-radius: 50%;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
 .bolinha.ativa {
-    background-color: var(--cor-destaque);
+    background-color: var(--cor-primaria);
+}
+
+.invisivel {
+    opacity: 0;
+    pointer-events: none;
 }
